@@ -23,7 +23,8 @@ public class DontImportJavaLangRule extends AbstractJavaRule {
 	    if (img.startsWith("java.lang")) {
 		if (img.startsWith("java.lang.ref") || img.startsWith("java.lang.reflect")
 			|| img.startsWith("java.lang.annotation") || img.startsWith("java.lang.instrument")
-			|| img.startsWith("java.lang.management") || img.startsWith("java.lang.Thread.")) {
+			|| img.startsWith("java.lang.management") || img.startsWith("java.lang.Thread.")
+			|| img.startsWith("java.lang.ProcessBuilder.")) {
 		    return data;
 		}
 		addViolation(data, node);
