@@ -55,4 +55,13 @@ import java.lang.Thread.UncaughtExceptionHandler;
 public class Foo {}
      ]]></code>
     </test-code>
+    <test-code>
+        <description>import java.lang.ProcessBuilder.Redirect: #1031 false DontImportJavaLang</description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+import java.lang.ProcessBuilder.Redirect;
+
+public class Foo {}
+        ]]></code>
+    </test-code>
 </test-data>
